# pygrib

./: .gitignore  .travis.yml  COPYING  Changelog  MANIFEST.in  README  README.macosx  README.md  api.html  class-tree.html  conftest.py  create_docs.sh  g2clib.c  g2clib.pyx  genindex.html  index.html  installing.html  main.py  module-tree.html  ncepgrib2.py  objects.inv  py-modindex.html  pygrib.c  pygrib.pyx  pyproject.toml  redirect.html  redtoreg.c  redtoreg.pyx  requirements.txt  search.html  searchindex.js  setup-ncepgrib2.py  setup.cfg  setup.cfg.template  setup.py  test.py  testw.py
.github/workflows/: build-conda.yml  build-windows.yml  build.yml
_build/doctrees/: environment.pickle  installing.doctree
_sources/: index.rst.txt
_static/: nature.css
_static/css/: nature2.css
docs/: Makefile  api-objects.txt  api.rst  class-tree.html  conf.py  help.html  identifier-index.html  index.html  index.rst  installing.rst  make.bat  module-tree.html  pygrib-module.html  pygrib.gribmessage-class.html  pygrib.index-class.html  pygrib.open-class.html  redirect.html
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installing.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installing.html  objects.inv  py-modindex.html  search.html  searchindex.js
eccodes/definitions/: boot.def  param_limits.def
eccodes/definitions.save/common/: c-1.table  statistics_spectral.def
eccodes/definitions.save/grib1/: 2.46.254.table  2.98.132.table  2.98.133.table  2.98.150.table  2.98.151.table  2.98.173.table  2.98.174.table  2.98.190.table  2.98.200.table  2.98.211.table  2.98.228.table  3.82.table  boot.def  cfVarName.def  data.grid_ieee.def  data.grid_jpeg.def  data.grid_second_order_row_by_row.def  data.spectral_complex.def  gds_not_present_bitmap.def  grid_definition_1.def  grid_definition_192.78.def  grid_definition_90.def  grid_definition_lambert.def  grid_rotation.def  local.214.244.def  local.214.245.def  local.34.1.def  local.82.0.def  local.82.82.def  local.98.11.def  local.98.12.def  local.98.13.def  (+22 more)
g2clib/: CHANGES  README  dec_jpeg2000.c  dec_png.c  enc_jpeg2000.c  enc_png.c  g2_unpack2.c  g2_unpack3.c  g2_unpack5.c  g2_unpack7.c  grib2.h  gridtemplates.c  gridtemplates.h  jpcpack.c  jpcunpack.c  pdstemplates.c  pdstemplates.h  seekgb.c
g2clib_src/: CHANGES  README  comunpack.c  dec_jpeg2000.c  dec_png.c  drstemplates.c  drstemplates.h  enc_jpeg2000.c  enc_png.c  g2_addfield.c  g2_addgrid.c  g2_getfld.c  g2_unpack4.c  g2_unpack7.c  grib2.h  gridtemplates.c  gridtemplates.h  ieeepack.c  ieeeunpack.c  makefile  pdstemplates.c  pdstemplates.h  pngpack.c
man/: cnvgrib1to2.1  cnvgrib2to1.1  grib_list.1  grib_repack.1
ncepgrib2/: __init__.py  gaussian.py  proj.py
ncepgrib2_docs/: api-objects.txt  class-tree.html  help.html  identifier-index.html  index.html  module-tree.html  ncepgrib2-module.html  ncepgrib2-pysrc.html  ncepgrib2.Grib2Encode-class.html  ncepgrib2.Grib2Message-class.html  redirect.html
ports/: README
pygrib/: __init__.py  _datadir.py  _pygrib.pyx
sampledata/: CMC_reg_WIND_ISBL_300_ps60km_2010052400_P012.grib  cl00010000_ecoclimap_rot  ds.maxt.grb  dspr.temp.grb  eta.grb  eumetsat_precip.grb  eumetsat_precip2.grb  flux.grb  gfs.grb  gfs.t12z.pgrbf120.2p5deg.grib2  ngm.grb  no-radius-shapeOfEarth-7.grb2  rap.wrfnat.grib2  reduced_latlon_surface.grib2  regular_latlon_surface.grib1  regular_latlon_surface.grib2  rotated_ll.grib1  safrica.grib2  scanning_mode.grib2  scanning_mode_with_bitmap.grib2  spectral.grb  spherical_pressure_level.grib1  spherical_pressure_level.grib2  tigge.grb  tpcprblty.grib2
src/pygrib/: __init__.py  _ctx.py  _pygrib.c  _pygrib.pyi  _pygrib.pyx  portable.h
src/pygrib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: README  animate.py  animate_gtkagg.py  animate_tkagg.py  conftest.py  run_tests.py  set_bitmap.py  test.py  test_Grib2Encode.py  test_ectigge.py  test_eumetsat.py  test_gaussian.py  test_lambert.py  test_latlons.py  test_merc.py  test_misc.py  test_ndfd_conus.py  test_ndfd_pr.py  test_open.py  test_reduced_gg.py  test_reduced_ll.py  test_reglatlon.py  test_rotated_ll.py  test_set_bitmap.py  test_spectral.py  test_stere.py  test_tigge.py  test_tpcprblty.py
utils/: cnvgrib1to2  cnvgrib2to1  grib1to2  grib2to1  grib_list  grib_repack
(+1234 files in other folders)
